--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,11 @@
 <h1>Users#new</h1>
 <p>Find me in app/views/users/new.html.erb</p>
+
+
+<%= form_with model: @user do |f| %>
+  <%= f.label :username, "Username" %>
+  <%= f.text_field :username %> <br>
+  <%= f.label :password, "Password" %>
+  <%= f.password_field :password %> <br>
+  <%= f.submit "Register" %>
+<% end %>
