--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,11 +1,11 @@
-<%= form_with model: @post do |form| %>
+<%= form_with model: post do |form| %>
   <p>
     <b>New post</b><br>
     <%= form.label :title %>
     <%= form.text_field :title %> <br>
     <%= form.label :content %>
     <%= form.text_field :content %>
-    <%= form.hidden_field(:parent, :value => parent) %>
+    <%= form.hidden_field(:post_id, :value => parent) %>
   </p>
   <p>
     <%= form.submit %>
