--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,29 +1,20 @@
-<% grouped_posts = @post.descendants.group_by{|p| p.post_id} %>
+<% grouped_comments = @post.comments.group_by{|p| p.comment_id} %>
 
 
-Main post: <%= @post.main_post.to_json %> <br>
-Parent: <%= @post.post.to_json %> <br>
-Children: <%= @post.posts.to_json %> <br>
-Descendants: <%= @post.descendants.to_json %> <br>
+Descendants: <%= @post.comments.to_json %> <br>
 
 
-
-
-<% if @post.post_id %>
-  <div>
-    Comment to: <%= @post.post.title %> <%= link_to "Show", @post.post %>
-  </div>
-<% end %>
 
 
 <h1> <%= @post.title %> </h1>
 
 <div>
-  <%= @post.content %>
+  <%= @post.content %> <br>
+  <%= link_to
 </div>
 
 <h2> Comments </h2>
 
 <div>
-  <%= render partial: "comment", locals: {post: @post, post_list: grouped_posts} %>
+  <%= render partial: "comment", locals: {comment: nil, comment_list: grouped_comments} %>
 </div>
