--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Posts#new</h1>
 <p>Find me in app/views/posts/new.html.erb</p>
 
-<%= render partial: "form", locals: {post: @post, parent: nil} %>
+<%= render partial: "form", locals: {post: @post} %>
 
