--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1> Posts </h1>
 <% @posts.each do |post| %>
   <%= post.title %>
   <%= link_to "Show", post %> <br>
 <% end %>
+<%= link_to "New Post", "/posts/new" %>
