--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,17 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li> <%= link_to "posts", posts_path %> </li>
+        <% if !!session[:current_user_id] %>
+          <li> <%= link_to("logout", logout_path) %> </li>
+        <% else %>
+          <li> <%= link_to("login", login_path) %> </li>
+          <li> <%= link_to("register", new_user_path) %> </li>
+        <% end %>
+      </ul>
+    </nav> 
     <%= yield %>
   </body>
 </html>
