--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,16 +11,26 @@
   </head>
 
   <body>
-    <nav>
-      <ul>
-        <li> <%= link_to "posts", posts_path %> </li>
-        <% if !!session[:current_user_id] %>
-          <li> <%= link_to("logout", logout_path) %> </li>
-        <% else %>
-          <li> <%= link_to("login", login_path) %> </li>
-          <li> <%= link_to("register", new_user_path) %> </li>
-        <% end %>
-      </ul>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <div class="container-fluid">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <%= link_to "posts", posts_path, class: "nav-link" %>
+          </li>
+          <% if !!session[:current_user_id] %>
+            <li class="nav-item">
+              <%= link_to "logout", logout_path, class: "nav-link" %>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to"login", login_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to"register", new_user_path, class: "nav-link" %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </nav> 
     <% flash.each do |type, msg| %>
       <div class="alert alert-info">
