--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,18 +15,21 @@
       <div class="container-fluid">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <%= link_to "posts", posts_path, class: "nav-link" %>
+            <%= link_to "Posts", posts_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "New Post", new_post_path, class: "nav-link" %>
           </li>
           <% if !!session[:current_user_id] %>
             <li class="nav-item">
-              <%= link_to "logout", logout_path, class: "nav-link" %>
+              <%= link_to "Logout", logout_path, class: "nav-link" %>
             </li>
           <% else %>
             <li class="nav-item">
-              <%= link_to"login", login_path, class: "nav-link" %>
+              <%= link_to "Login", login_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <%= link_to"register", new_user_path, class: "nav-link" %>
+              <%= link_to "Register", new_user_path, class: "nav-link" %>
             </li>
           <% end %>
         </ul>
@@ -37,6 +40,8 @@
         <%= msg %>
       </div>
     <% end %>
-    <%= yield %>
+    <div class="mx-5 mt-3">
+      <%= yield %>
+    </div>
   </body>
 </html>
