Spacing new post form

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,9 +2,9 @@
   <p>
     <b>New post</b><br>
     <%= form.label :title %>
-    <%= form.text_field :title %> <br>
+    <%= form.text_field :title, class: "mt-1" %> <br>
     <%= form.label :content %>
-    <%= form.text_field :content %>
+    <%= form.text_field :content, class: "mt-1" %>
   </p>
   <p>
     <%= form.submit %>
