--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,5 @@
 <h1> Posts </h1>
 <% @posts.each do |post| %>
-  <%= post.title %>
-  <%= link_to "Show", post %> <br>
+  <i><%= post.user.username %></i>: <%= link_to post.title, post %> <br>
 <% end %>
 
