--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: @comment do |f| %>
   <%= f.hidden_field :post_id %>
   <%= f.hidden_field :comment_id %>
-  <%= f.text_field :content%>
+  <%= f.text_field :content, :required => true%>
   <%= f.submit "comment" %>
 <% end %>
