Formatted text for posts
- New post form has text area instead of text field
- Show view displays simple formatted text

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,7 +4,7 @@
     <%= form.label :title %>
     <%= form.text_field :title, class: "mt-1", :required => true %> <br>
     <%= form.label :content %>
-    <%= form.text_field :content, class: "mt-1", :required => true %>
+    <%= form.text_area :content, class: "mt-1", :required => true %>
   </p>
   <p>
     <%= form.submit %>
